# permitflow-es

./: .env.example  .gitignore  AGENTS.md  README.md  archivos_ui_plan.md  badge.txt  card.txt  docs.txt  dump_documentos.md  dump_migrations.md  dump_routers.md  dump_scripts.md  git_output3.txt  globals.txt  pnpm-lock.yaml  railway.json  resumen.txt  run_git3.py  script.py  sql.py  tailwind.txt  timeline.txt  validador.txt  view.txt
apps/api/: apply_migration.py  check_defaults.py  config.py  database.py  dump_backend.py  dump_tools.py  fix_dates.py  main.py  pyproject.toml  query_expedientes.py  query_schema.py  reload_schema.py  script.py  script_async.py  seguridad.py  sql.py  test_ai.py  update_schema.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0519f21bbb78_initial_schema.py  20d1d6d86896_add_server_defaults_to_uuid.py  f322ac0b98a0_add_tramites_estado_referencia_notas.py
apps/api/documentos/: __init__.py  contextos.py  generador.py  mtd.py  pdf.py  schemas.py
apps/api/models/: expediente.py  organizacion.py
apps/api/motor_normativo/: clasificador.py  excepciones.py  validador.py
apps/api/routers/: clasificador.py  documentos.py  validador.py
apps/api/schemas/: clasificador.py
apps/api/scripts/: boe_pipeline.py  generate_andalucia_jsons.py  marcar_nivel_verificacion.py  revisar_borrador.py  seed_validaciones.py  test_pipeline.py
apps/api/servicios/: ai_client.py  geocoding_client.py
apps/api/tests/: test_casos_referencia.py  test_clasificador.py  test_documentos.py  test_fronteras.py  test_validador.py
docs/: foundation.md  (+1 more)
(+142 files in other folders)
