[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.137.1",
    "feedparser>=6.0.12",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "json-logic-qubit>=0.9.1",
    "openai>=2.42.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf2>=3.0.1",
    "pytest>=9.1.0",
    "resend>=2.31.0",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
